--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "react-dom": "18.2.0",
     "react-email": "1.10.0",
     "react-hanger": "2.4.5",
+    "request-ip": "3.3.0",
     "resend": "2.0.0",
     "secure-password": "4.0.0",
     "uploadthing": "6.0.4",
